@@ -12,19 +12,23 @@ Dependencies = ["language"]
 from MoinMoin import wikiutil
 
 def execute(self, args):
-    # Get list of template pages readable by current user
-    filter = self.request.cfg.cache.page_template_regex.search
-    templates = self.request.rootpage.getPageList(filter=filter)
-    result = []
-    if templates:
-        templates.sort()
-        page = self.formatter.page
-        # send list of template pages
-        result.append(self.formatter.bullet_list(1))
-        for template in templates:
-            result.append(self.formatter.listitem(1))
-            result.append(page.link_to(self.request, template, querystr={'action': 'edit', 'template': template}))
-            result.append(self.formatter.listitem(0))
-        result.append(self.formatter.bullet_list(0))
-    return ''.join(result)
+    result = ''
+    # we don't want to spend much CPU for spiders requesting nonexisting pages
+    if not self.request.isSpiderAgent:
+        # Get list of template pages readable by current user
+        filter = self.request.cfg.cache.page_template_regex.search
+        templates = self.request.rootpage.getPageList(filter=filter)
+        result = []
+        if templates:
+            templates.sort()
+            page = self.formatter.page
+            # send list of template pages
+            result.append(self.formatter.bullet_list(1))
+            for template in templates:
+                result.append(self.formatter.listitem(1))
+                result.append(page.link_to(self.request, template, querystr={'action': 'edit', 'template': template}))
+                result.append(self.formatter.listitem(0))
+            result.append(self.formatter.bullet_list(0))
+        result = ''.join(result)
+    return result
 
